*** When upgrading, don't forget to: "cd bin ; ./install.pl" ***
*** Also, it is _highly_ advisable to backup your data before upgrading ***

Version 1.9.6

* "Default to head" option for CVS topic creation was not used when
  selected, but when it was unselected.  This has now been fixed.  
  Spotted by mnk26@users.sourceforge.net.
  
* Fix for "v-string in use/require non-portable" warning when using
  Perl 5.10 from rob_webset@users.sourceforge.net.
  
* Deleting a topic connected with a TestDirector bug has been fixed
  by rob_webset@users.sourceforge.net.
  
* Creation of Subversion topics which use a file for the module field
  in the create topic screen may not work correctly for some versions
  of Subversion.  This has now been fixed by 
  rob_webset@users.sourceforge.net.
  
* Make sure XML representation of a topic has its data properly escaped.
  Fixed by rob_webset@users.sourceforge.net.  
  
* Ability to parse git patches correctly.

* Ability to parse hg diffs (Mercurial SCM) correctly.

* Better detection of filename extensions for highlighting.  This
  previously caused issues for temporary directories which contained 
  a period, but the filename itself didn't.  Reported by
  rob_webset@users.sourceforge.net.
  
* Scmbug integration now works correctly if multiple bug IDs are
  specified is the create topic screen.  Fixed by
  rob_webset@users.sourceforge.net.
  
* Fixed the parsing of Subversion diffs which contained modifications
  within property sets.  Also fixed case where file in diff is empty.
  Reported by clechasseur@users.sourceforge.net.
  
* Show total added/removed line count after table of contents on view
  topic screen.  Also show same line counts on create topic email.
  
* Make the topic title in the edit comment page link directly to the
  code location being commented on rather than just the top of the
  view topic page.
  
* Use pegged revisions instead of operative revisions when retrieving 